Add Auth0 secret

--- a/.example.env
+++ b/.example.env
@@ -7,4 +7,5 @@ AZURE_STORAGE_KEY=[storage key]
 AZURE_STORAGE_CONNECTION_STRING=[sas key or something here]
 HCAPTCHA_SECRET_KEY=[hcaptcha secret key]
 PLAUSIBLE_API_KEY=[plausible api key for analytics reporting]
+AUTH0_SECRET=[random 40-character string]
 PORT=3000
