--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
       "esModuleInterop": true
     },
     "files": [
-      "server.ts"
+      "server.ts",
+      "src/flow/dash.ts",
+      "src/flow/settings.ts",
+      "src/flow/videos.ts"
     ]
 }
