--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@azure/storage-blob": "^12.5.0",
+    "@dothq/id": "^1.0.1",
     "@types/into-stream": "^3.1.1",
     "@types/multer": "^1.4.5",
     "@types/pug": "^2.0.4",
@@ -29,6 +30,7 @@
     "nodemailer": "^6.6.2",
     "path": "^0.12.7",
     "pug": "^3.0.2",
+    "request": "^2.88.2",
     "simple-ssh": "^1.0.0",
     "typescript": "^4.3.2"
   },
