--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "express-openid-connect": "^2.4.0",
     "express-rate-limit": "^5.2.6",
     "formidable": "^1.2.2",
+    "mazure": "^2.0.1",
     "multer": "^1.4.2",
-    "multer-azure": "^2.0.1",
     "nodemailer": "^6.6.2",
     "path": "^0.12.7",
     "pug": "^3.0.2",
