--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/into-stream": "^3.1.1",
     "@types/multer": "^1.4.5",
     "@types/pug": "^2.0.4",
+    "abort-controller": "^3.0.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "drand-client": "^0.2.0",
     "express": "^4.17.1",
     "express-hcaptcha": "^0.0.3",
     "express-openid-connect": "^2.4.0",
