--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pug": "^3.0.2",
     "request": "^2.88.2",
     "simple-ssh": "^1.0.0",
+    "twilio": "^3.65.0",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
