--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-openid-connect": "^2.4.0",
     "express-rate-limit": "^5.2.6",
     "formidable": "^1.2.2",
+    "js.poke": "^1.2.4",
     "mazure": "^2.0.1",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
