--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "formidable": "^1.2.2",
     "js.poke": "^1.2.4",
     "mazure": "^2.0.1",
+    "meilisearch": "^0.20.1",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "path": "^0.12.7",
