--- a/package.json
+++ b/package.json
@@ -13,28 +13,25 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@azure/storage-blob": "^12.5.0",
-    "@dothq/id": "^1.0.1",
     "@types/into-stream": "^3.1.1",
     "@types/multer": "^1.4.5",
     "@types/pug": "^2.0.4",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
     "formidable": "^1.2.2",
-    "js.poke": "^1.2.4",
-    "mazure": "^2.0.1",
     "meilisearch": "^0.20.1",
-    "multer": "^1.4.2",
-    "node-fetch": "^2.6.1",
     "path": "^0.12.7",
     "pug": "^3.0.2",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
-    "@types/express-rate-limit": "^5.1.1"
+    "@types/express-rate-limit": "^5.1.1",
+    "@types/node": "^17.0.23"
   }
 }
