--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
     "gatsby": "^4.15.2",
+    "gatsby-plugin-emotion": "^7.15.0",
     "gatsby-plugin-image": "^2.15.1",
     "gatsby-plugin-manifest": "^4.15.1",
     "gatsby-plugin-postcss": "^5.15.0",
