--- a/package.json
+++ b/package.json
@@ -17,10 +17,20 @@
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
+    "@mantine/core": "^4.2.7",
+    "@mantine/dates": "^4.2.7",
+    "@mantine/dropzone": "^4.2.7",
+    "@mantine/form": "^4.2.7",
+    "@mantine/hooks": "^4.2.7",
+    "@mantine/modals": "^4.2.7",
+    "@mantine/rte": "^4.2.7",
+    "@mantine/spotlight": "^4.2.7",
+    "dayjs": "^1.11.2",
     "gatsby": "^4.15.2",
     "gatsby-plugin-emotion": "^7.15.0",
     "gatsby-plugin-image": "^2.15.1",
     "gatsby-plugin-manifest": "^4.15.1",
+    "gatsby-plugin-mantine": "^4.0.0",
     "gatsby-plugin-postcss": "^5.15.0",
     "gatsby-plugin-react-helmet": "^5.15.0",
     "gatsby-plugin-sharp": "^4.15.1",
