--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby-transformer-sharp": "^4.15.1",
     "postcss": "^8.4.14",
     "react": "^18.1.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0"
   },
