--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
+    "@fdn-ui/icons-react": "^0.0.11",
     "@mantine/core": "^4.2.7",
     "@mantine/dates": "^4.2.7",
     "@mantine/dropzone": "^4.2.7",
