--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@fdn-ui/icons-react": "^0.0.11",
+    "@huelet/foundation-ui": "^0.2.0",
     "@mantine/core": "^4.2.7",
     "@mantine/dates": "^4.2.7",
     "@mantine/dropzone": "^4.2.7",
